# GVINS-Dataset

./: README.md
data/visensor_parameters/: imu.yaml  left_camera.yaml  right_camera.yaml
toolkit/: CMakeLists.txt  package.xml
toolkit/src/: bag2rinex.cpp  bag2rtk_solution.cpp
